--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress --mode production",
-    "watch": "webpack --progress --watch --mode development",
-    "start": "webpack serve --open --mode development"
+    "dev": "webpack serve --open --mode development",
+    "start": "node server.js",
+    "heroku-postbuild": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
-    "date-fns": "^2.28.0"
+    "date-fns": "^2.28.0",
+    "express": "^4.18.1"
   }
 }
